Bug 1696563 - Reuse RDM's toolbar resize observer to set the size of the dialogStack r=Gijs
Overlays for content prompts that are opened with tabdialog box occupy the entire browser viewport when RDM is opened. This is because `.dialogStack` is `position: fixed` to remove it from the grid layout and to avoid issues with scrolling when the simulated viewport is larger than the device viewport. The simulated viewport causing overflow is the reason why `position: absolute` might not be what we want to use here.

Now we have to deal with the problem of the overlay covering other browser UI.. To deal with this, this patch reuses the resize observer to store the `.browserStack` sizes so that `.dialogStack` can use these values to resize the modal overlay when other browser UI occupy the space of the browserStack (such as DevTools or the findbar).

Differential Revision: https://phabricator.services.mozilla.com/D107501

UltraBlame original commit: a1918588414c36898477746758de8d55d27965c4

--- a/devtools/client/responsive/responsive-browser.css
+++ b/devtools/client/responsive/responsive-browser.css
@@ -1,6 +1,6 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 #appcontent[devtoolstheme="light"] {
   --rdm-browser-container-background: #F5F5F6;
@@ -8,7 +8,7 @@
 }
 
 #appcontent[devtoolstheme="dark"] {
-  --rdm-browser-container-background: #18181a; 
+  --rdm-browser-container-background: #18181a; /* This should map to --theme-toolbar-background. */
   --rdm-browser-box-shadow: 0 4px 4px 0 rgba(105, 105, 105, 0.26);
 }
 
@@ -21,6 +21,7 @@
   position: fixed;
   z-index: 1;
   height: 30px;
+  width: var(--rdm-stack-width);
 }
 
 .browserContainer.responsive-mode .browserStack > .rdm-toolbar.accomodate-ua {
@@ -41,9 +42,9 @@
 }
 
 .browserContainer.responsive-mode > .browserStack > * {
-  box-sizing: content-box; 
-
-
+  box-sizing: content-box; /* This is important to ensure that the pane has the
+                              precise number of pixels defined by --rdm-width
+                              and --rdm-height. */
   height: var(--rdm-height);
   width: var(--rdm-width);
 }
@@ -76,7 +77,7 @@ html[dir="rtl"] .browserContainer.responsive-mode.left-aligned > .browserStack {
   transform-origin: 0 0;
 }
 
-
+/* Resize handles */
 
 .browserContainer.responsive-mode > .browserStack > .viewport-resize-handle {
   width: 16px;
@@ -125,9 +126,15 @@ html[dir="rtl"] .browserContainer.responsive-mode.left-aligned > .browserStack {
   left: 0;
 }
 
-
+/* tabdialogbox handling - it needs to not be treated as part of the grid: */
 .browserContainer.responsive-mode > .browserStack > .dialogStack {
   position: fixed;
-  width: 100%;
-  height: 100%;
+  width: var(--rdm-stack-width);
+}
+
+/* handle height for tabdialogbox and RDM device modal. Both are position:fixed and so
+   are taken from the grid layout when RDM is opened. */
+.browserContainer.responsive-mode .browserStack.device-modal-opened > .rdm-toolbar,
+.browserContainer.responsive-mode > .browserStack > .dialogStack {
+  height: var(--rdm-stack-height);
 }
